# toolsets

./: .gitignore
gajini/: .gitignore  README.md  pyproject.toml
gajini/mem/: __init__.py  __main__.py  cli.py  clipboard.py  config.py  index.py  note.py  store.py  tui.py  web.py
gajini/mem/static/: index.html
llmwiki/: idea.md  pyproject.toml
llmwiki/docs/: v1-design.md
llmwiki/src/wiki/: cli.py  config.py  sources.py  status.py  vault.py
misc/: mem-session.ts
pageindex/: .gitignore  AGENTS.md  README.md  SKILL.md  config.yaml  index_document.py  requirements.txt  simulate_progress.py
pageindex/contents/: index.json
pageindex/contents/adultsocialcareaccel_812/: content.jsonl  index.json  metadata.json
pageindex/contents/appealsdevguide_812/: config.snapshot.yaml  content.jsonl  index.json  metadata.json
pageindex/contents/authoringscriptsusingieg_812/: content.jsonl  index.json  metadata.json
pageindex/contents/batchprocesses_812/: content.jsonl  index.json  metadata.json
pageindex/contents/businessintelligenceguide_812/: config.snapshot.yaml  content.jsonl  index.json  metadata.json
pi/session-viewer/: index.html  server.py
proxy/: README.md  claude.js  codex.js  forward-proxy-server.js  package-lock.json  package.json
toolhub/: README.md  sample.json  tool
vs-mdemo/: README.md  md-presenter-0.0.1.vsix  md-presenter-0.0.2.vsix  md-presenter-0.0.3.vsix  md-presenter-0.0.4.vsix  md-presenter-0.0.5.vsix  md-presenter-0.0.6.vsix  package.json  sample.md
vs-mdemo/src/: docExport.js  extension.js
(+367 files in other folders)
