[project]
name = "wiki"
version = "0.1.0"
description = "Agent-native local markdown wiki helper CLI"
readme = "docs/v1-design.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
wiki = "wiki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki"]
